# fortunes-freebsd-classic

./: Makefile  README.md  setup.cfg
data/: fortunes  fortunes-o  murphy-o
