[metadata]
name = fortunes-freebsd-classic
description = Classical fortune data files from FreeBSD
long_description = file: README.md
long_description_content_type = text/markdown
version = 2021.8.7
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/fortunes-freebsd-classic/
project_urls =
    Bug Tracker = https://github.com/HubTou/fortunes-freebsd-classic/issues
keywords = pnu-project, unix, fortune
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Fortune Cookies

[options]
package_dir =
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src

[options.data_files]
share/games/fortune = 
    data/fortunes
    data/fortunes-o
    data/fortunes-o.dat
    data/fortunes.dat
    data/gerrold.limerick
    data/gerrold.limerick.dat
    data/limerick
    data/limerick.dat
    data/murphy
    data/murphy-o
    data/murphy-o.dat
    data/murphy.dat
    data/startrek
    data/startrek.dat
    data/zippy
    data/zippy.dat

